updated the specification document frontend part

--- a/v1.0-specification.md
+++ b/v1.0-specification.md
@@ -21,7 +21,7 @@
 
 ### General Overview
 
-JayPlus is a specialized business management platform aimed at auto detailing enterprises. It provides a comprehensive suite of administrative and operational tools, including but not limited to financial management, appointment scheduling, staff management, and more.
+JayPlus is a specialized business management software for auto detailing businesses. The objective for JayPlus is to become a comprehensive suite of administrative and operational tools that will include, but are not limited to, financial management, appointment scheduling, staff management, and more.
 
 ### Primary Goals
 
@@ -31,16 +31,16 @@ JayPlus is a specialized business management platform aimed at auto detailing en
 
 ### Features in Development
 
-- Scheduling and reservation functionality
-- Business analytics and reporting
-- Workforce management tools
-- Marketing resource kits
+- Booking and booking management functionality (primary focus for v1.0)
+- Business analytics and reporting (planned for future releases)
+- Workforce management tools (planned for future releases)
+- Marketing resource kits (planned for future releases)
 
 ## Version 1.0 Development Plan
 
 ### General Overview
 
-The initial release, JayPlus v1.0, will mainly focus on implementing the reservation and scheduling subsystem, which will include a user interface for customers and an administrative dashboard.
+For the initial release, JayPlus v1.0 will concentrate primarily on implementing the booking subsystem. This will include a user interface for customers to schedule services and an administrative dashboard for managing these bookings.
 
 ### Technical Architecture
 
@@ -49,26 +49,23 @@ The initial release, JayPlus v1.0, will mainly focus on implementing the reserva
 
 #### Frontend Development
 
-The frontend is engineered using React and TypeScript. It comprises two distinct applications:
+The frontend is built using React and TypeScript and consists of two distinct applications:
 
-- Admin Interface: Primarily focuses on functionalities required by auto detailing administrators, such as reservation management, analytics, and workforce management.
-- Customer Interface: Primarily focuses on providing customers with appointment scheduling capabilities.
+- Admin Interface: The primary focus for v1.0 is on booking management functionalities required by auto detailing administrators.
+- Customer Interface: The primary focus for v1.0 is on enabling customers with service scheduling capabilities.
 
 Technologies Utilized:
 
-- React Framework
-- TypeScript Programming Language
-- React Router DOM for navigation
+- React
+- TypeScript
+- React Router DOM
 
 #### Backend Development
 
-The backend is implemented in Go, and it is organized into domain-specific microservices. A Postgres database is used for data storage. The following services are the focus for v1.0:
+The backend is implemented in Go and organizes functionalities into domain-specific packages. A Postgres database is used for data storage. For v1.0, the development will mainly focus on:
 
-- Scheduling and Reservation
-- Payment Gateway
-- User Authentication
-- Messaging Service
-- Database Operations
+- Booking
+- Authentication
 
 Technologies Utilized:
 
@@ -84,7 +81,7 @@ Technologies Utilized:
 
 #### Customer Booking
 
-Customers can access the booking page at `{business_name}.jayplus.app/booking` where they are guided through a 3-step booking process:
+Customers can access the booking page at `{business_name}.jayplus.app/booking` where they are presented with a 3-step booking process:
 
 1. **Vehicle Type Selection**
 2. **Service Type Selection**
@@ -101,7 +98,7 @@ If the payment is successful, a final receipt containing the booking details and
 
 ###### Vehicle Type Selection
 
-- **Vehicle Types Dropdown**:
+- **Vehicle Types List**:
   - Displays all the vehicle types that {business_name} Auto Detailing services.
 - **Description Field**:
   - Provides a description for the selected vehicle type, explaining what types of vehicles it includes.
@@ -111,13 +108,18 @@ Example: {Sedan, SUV, LargeSUV/Truck, Motorcycle}
 
 ###### Service Type Selection
 
-- **Service Types Dropdown**:
-  - Lists all the service types {business_name} Auto Detailing offers for the selected vehicle.
+- **Service Types List**:
+  - Displays all the service types {business_name} Auto Detailing offers for the selected vehicle type.
 - **Description Field**:
   - Elaborates on the selected service type, detailing what it entails.
 
 Example: {Show Room, Basic, Interior, Exterior}
-"Includes vacuuming (including trunk), washing all rubber mats, wiping the dashboard, power washing the body and windows, and cleaning wheel wells."
+
+- Vacuum (Including Trunk Compartment)
+- Remove & Wash all Rubber Mats
+- Wipe All Over The dashboard
+- Power Wash Body and Windows
+- Power Wash & Clean Wheel Wells
 
 ###### Date and Time Selection
 
@@ -129,7 +131,6 @@ Example: {Show Room, Basic, Interior, Exterior}
 ###### Business Rules
 
 - Each vehicle type has a set of services available for booking.
-- An active cell signifies an available time slot, while an inactive one indicates unavailability for the selected service and vehicle.
 
 #### Payment Page
 
@@ -145,9 +146,9 @@ Utilizes a Stripe-based form for payment processing, accompanied by a phone numb
 
 #### Dashboard
 
-Admins can visit `{business_name}.jayplus.app/admin/dashboard` to manage bookings. The dashboard is designed with a sidebar for navigation and a main area displaying the active feature. For V1.0, the only active feature is "Booking Management."
+Admins can visit `{business_name}.jayplus.app/admin/dashboard` to access the dashboard. The admin panel is designed with a side navbar for navigation and a main area displaying the active feature. For V1.0, the only active feature is "Booking Management." On narrow screens, such as a phone, an expandable top navbar replaces the side navbar.
 
-#### Sidebar
+#### Navbar
 
 - **Business Logo**: Represents the business visually.
 - **Admin Features List**: For V1.0, only "Booking Management" is active.
@@ -157,10 +158,10 @@ Admins can visit `{business_name}.jayplus.app/admin/dashboard` to manage booking
 
 Accessible at `{business_name}.jayplus.app/admin/booking-management`, this page lets admins view and manage current bookings.
 
-##### Page Elements
+##### Page Heading
 
 - **Page Title**: Clearly identifies the page.
-- **"Add a Booking" Button**: Allows manual booking addition.
+- **"Add a Booking" Button**: Allows admins to add a booking without payment.
 
 ##### Calendar View
 
@@ -173,11 +174,15 @@ Displays bookings in a calendar layout, showing a 3-day view for mobile and a 5-
 
 ##### Booking Details Modal
 
-Pops up upon selecting a booking, displaying detailed information and a "Cancel Booking" button.
+Pops up upon selecting a booking on booking management page, displaying detailed information and a "Cancel Booking" button.
 
 ##### Confirm Delete Modal
 
 Appears upon clicking "Cancel Booking," requiring confirmation for the action.
+
+##### Confirm Booking Modal
+
+Appears upon clicking "Book" button in admin booking, requiring confirmation for the action.
 
 ##### Business Rules
 
@@ -194,14 +199,14 @@ The frontend application utilizes React and is orchestrated with react-router-do
 - CustomerApp
 - AdminApp
 
-Each of these sections contains an `{Outlet}` tag responsible for rendering the relevant child components depending on the current route.
+Each of these sections contains an `<Outlet>` tag responsible for rendering the relevant child components depending on the current route.
 
 The codebase adheres to a clean and logical folder structure, which is organized as follows:
 
 - `src`: The source directory
-  - `admin`: Contains the Admin app-specific components and utilities
-  - `customer`: Contains the Customer app-specific components and utilities
-  - `shared`: Houses components and utilities that are common across both apps
+  - `admin`: Contains the Admin app-specific pages and utilities
+  - `customer`: Contains the Customer app-specific pages and utilities
+  - `components`: Includes all app components caregorized based on domains they are used in
   - `utils`: Utility functions used across the project
   - `context`: Handles global state for both apps using ContextAPI
 
@@ -217,39 +222,7 @@ The `pages` directory under `customer` adopts a domain-driven sub-directory stru
   - `BookingSelectionPage`: Handles booking options
 - `payment`
   - `PaymentPage`: Manages payment process
-  - `PaymentSuccessPage`: Displays payment success message
-
-### Components
-
-Components can either be app-specific or shared between both CustomerApp and AdminApp.
-
-#### Customer-Specific
-
-_Note: Details for customer-specific components are pending._
-
-#### Shared
-
-Components that are shared across both applications are stored in the `shared` directory, including:
-
-- `SelectListInline`
-- `SelectListItem`
-- `DescriptionField`
-- `TimeSelectionCalendarView`
-  - `PreviousDayButton`
-  - `NextDayButton`
-  - `DayColumnList`
-  - `DayColumn`
-- `ButtonMD`
-- `KeyValueTable`
-- `PaymentForm`
-- `ButtonSM`
-- `CalendarCell`
-- `ButtonXS`
-
-##### Modals
-
-- `BookingDetailsModal`
-- `ConfirmCancelModal`
+  - `PaymentSuccessPage`: Displays payment success and failure message
 
 ### Routes
 
@@ -266,17 +239,19 @@ The `AdminApp` is the parent component for the administrative side of the applic
 
 ### Pages
 
-Contained in the `pages` directory under `admin`, it includes:
+The `pages` directory under `customer` adopts a domain-driven sub-directory structure. As of version V1.0, it includes:
 
-- `DashboardPage`: The main administrative dashboard
-- `BookingManagementPage`: Manages bookings
+- `dashboard`
+  - `DashboardPage`: The main administrative dashboard
+- `booking`
+  - `BookingManagementPage`: Manages bookings
+  - `BookingSelectionPage`: Handles booking options
 
-### Components
+#### Modals
 
-#### Admin-Specific
-
-- `NavbarSide`: Side navigation bar for admin panel
-- `NavbarTop`: Top navigation bar for admin panel
+- `BookingDetailsModal`: Shows individual booking details and the option to cancel a booking
+- `ConfirmCancelModal`: Asks to confirm if the admin wants to delete the booking
+- `ConfirmBookingModal`: Asks to confirm if the admin wants to book the appointment
 
 ### Routes
 
@@ -285,6 +260,47 @@ Routing for AdminApp in `routes.tsx` is as follows:
 - `/admin`: Renders `AdminApp`
   - `''`: Default route rendering `DashboardPage`
   - `'booking-management'`: Renders `BookingManagementPage`
+    - `booking`: Renders `BookingSelectionPage`
+
+## Components
+
+Components directory is organized in a domain-specific sub-directory format as follows:
+
+- `components`
+  - `system`: Components that are used across the system, such as buttons, cards and more.
+  - `booking`: Components that are used only in booking service related pages.
+  - `payment`: Components that are used only in payment service related pages.
+
+### System
+
+- `system`
+  - `buttons`: Directory including Button types
+    - `ButtonMD`
+    - `ButtonSM`
+    - `ButtonXS`
+  - `navbar`: Directory including Navbar types
+    - `NavbarSide`
+    - `NavbarTop`
+
+### Booking
+
+- `booking`
+  - `bookingCalendarView`: Directory including booking calendar view components
+    - `BookingCalendarView5Day`
+    - `BookingCalendarView7Day`
+    - `PreviousDayButton`
+    - `NextDayButton`
+    - `DayColumnSelectTime`
+    - `DayColumnBookingCards`
+  - `SelectListInline`
+  - `SelectListItem`
+  - `DescriptionField`
+
+### Payment
+
+- `payment`
+  - `PaymentForm`
+  - `Invoice`
 
 # Backend App
 
