updated backend section

--- a/v1.0-specification.md
+++ b/v1.0-specification.md
@@ -306,7 +306,7 @@ Components directory is organized in a domain-specific sub-directory format as f
 
 ## Overview
 
-The backend application is structured in a modular architecture and follows a domain-driven design pattern. The entry point for the backend application is the `main` function located in the `cmd/app` directory.
+The backend application is structured as a modular architecture and follows a domain-driven design pattern. The entry point for the backend application is the `main` function located in the `cmd/app` directory.
 
 ## Structure
 
@@ -321,8 +321,13 @@ The backend application is structured in a modular architecture and follows a do
 
 ## Dependencies
 
-- **Databases**: [Managed Postgres database by digital ocean]
-- **Libraries**: Utilizes JWT for authentication, Stripe for payment, and Twilio for SMS.
+- **Databases**: Managed Postgres database by digital ocean
+- **Libraries**:
+  - Gorilla Mux: Routing
+  - JWT: Authentication
+  - Stripe: Payment
+  - Twilio: SMS
+  - PGX: Database
 
 ## Services
 
@@ -330,7 +335,7 @@ The backend application is structured in a modular architecture and follows a do
 
 #### App Service
 
-- **Responsibility**: Router setup and UI configuration management.
+- **Responsibility**: Orchestrating between different services, Router setup, and UI configuration management.
 - **Endpoints**:
   - `POST "/ui-config" ({sub-domain})`
 - **Handlers**:
@@ -354,23 +359,30 @@ The backend application is structured in a modular architecture and follows a do
 
 ### Business Logic Services
 
-#### Booking Management Service
+#### Booking Service
 
 - **Responsibility**: Handles booking-related business logic.
 - **Endpoints**:
-  - `POST "/booking-management/vehicle-types" ({sub-domain})`
-  - `POST "/booking-management/service-types" ({sub-domain})`
-  - `POST "/booking-management/available-timeslots" ({sub-domain}, {vehicle-type}, {service-type})`
-  - `POST "/booking-management/service-cost" ({sub-domain}, {vehicle-type}, {service-type})`
-  - `POST "/booking-management/create-booking" ({sub-domain}, {vehicle-type}, {service-type}, {payment-number}, {booking-number})`
+  - `POST "/booking/vehicle-types" ({sub-domain})`
+  - `POST "/booking/service-types" ({sub-domain})`
+  - `POST "/booking/available-timeslots" ({sub-domain}, {vehicle-type}, {service-type})`
+  - `POST "/booking/service-cost" ({sub-domain}, {vehicle-type}, {service-type})`
+  - `POST "/booking/create-booking" ({sub-domain}, {vehicle-type}, {service-type}, {payment-number}, {booking-number})`
+  - `POST "/booking/bookings" ({sub-domain}, {date-between})`
+  - `POST "/booking/booking/:id" ({sub-domain}, {booking-id})`
+  - `POST "/booking/cancel-booking/:id" ({sub-domain}, {booking-id})`
 - **Handlers**:
   - **VehicleTypes**: Retrieves vehicle types.
   - **ServiceTypes**: Retrieves service types.
   - **AvailableTimeslots**: Retrieves available times.
   - **ServiceCost**: Provides cost details.
   - **CreateBooking**: Creates a new booking.
+  - **Bookings**: Retrieve all bookings for the specified dates.
+  - **Booking**: Retrieve a single booking with the specified ID.
+  - **CancelBooking**: Updates booking status to Cancelled.
 - **Internal Functions**:
   - **UpdateBookingPaymentStatus**: Updates payment status.
+  - **UpdateBookingStatus**: Update booking status.
   - **DeleteBooking**: Deletes a booking.
 
 #### Payment Service
@@ -391,7 +403,7 @@ The backend application is structured in a modular architecture and follows a do
 
 ## Database
 
-- **Placeholder**: [Include your database schema here]
+- **Placeholder**: [Include database schema here]
 
 ## Error Handling
 
