updated the variable styles

--- a/v1.0-specification.md
+++ b/v1.0-specification.md
@@ -81,7 +81,7 @@ Technologies Utilized:
 
 #### Customer Booking
 
-Customers can access the booking page at `{business_name}.jayplus.app/booking` where they are presented with a 3-step booking process:
+Customers can access the booking page at `<business_name>.jayplus.app/booking` where they are presented with a 3-step booking process:
 
 1. **Vehicle Type Selection**
 2. **Service Type Selection**
@@ -99,7 +99,7 @@ If the payment is successful, a final receipt containing the booking details and
 ###### Vehicle Type Selection
 
 - **Vehicle Types List**:
-  - Displays all the vehicle types that {business_name} Auto Detailing services.
+  - Displays all the vehicle types that `<business_name>` Auto Detailing services.
 - **Description Field**:
   - Provides a description for the selected vehicle type, explaining what types of vehicles it includes.
 
@@ -109,7 +109,7 @@ Example: {Sedan, SUV, LargeSUV/Truck, Motorcycle}
 ###### Service Type Selection
 
 - **Service Types List**:
-  - Displays all the service types {business_name} Auto Detailing offers for the selected vehicle type.
+  - Displays all the service types `<business_name>` Auto Detailing offers for the selected vehicle type.
 - **Description Field**:
   - Elaborates on the selected service type, detailing what it entails.
 
@@ -146,7 +146,7 @@ Utilizes a Stripe-based form for payment processing, accompanied by a phone numb
 
 #### Dashboard
 
-Admins can visit `{business_name}.jayplus.app/admin/dashboard` to access the dashboard. The admin panel is designed with a side navbar for navigation and a main area displaying the active feature. For V1.0, the only active feature is "Booking Management." On narrow screens, such as a phone, an expandable top navbar replaces the side navbar.
+Admins can visit `<business_name>.jayplus.app/admin/dashboard` to access the dashboard. The admin panel is designed with a side navbar for navigation and a main area displaying the active feature. For V1.0, the only active feature is "Booking Management." On narrow screens, such as a phone, an expandable top navbar replaces the side navbar.
 
 #### Navbar
 
@@ -156,7 +156,7 @@ Admins can visit `{business_name}.jayplus.app/admin/dashboard` to access the das
 
 #### Booking Management Page
 
-Accessible at `{business_name}.jayplus.app/admin/booking-management`, this page lets admins view and manage current bookings.
+Accessible at `<business_name>.jayplus.app/admin/booking-management`, this page lets admins view and manage current bookings.
 
 ##### Page Heading
 
@@ -337,7 +337,7 @@ The backend application is structured as a modular architecture and follows a do
 
 - **Responsibility**: Orchestrating between different services, Router setup, and UI configuration management.
 - **Endpoints**:
-  - `POST "/ui-config" ({sub-domain})`
+  - `POST "/ui-config" (<sub-domain>)`
 - **Handlers**:
   - **UIConfig**: Retrieves business UI settings from the database.
 
@@ -349,7 +349,7 @@ The backend application is structured as a modular architecture and follows a do
 
 - **Responsibility**: Manages authentication and authorization.
 - **Endpoints**:
-  - `POST "/auth/login" ({email}, {password})`
+  - `POST "/auth/login" (<email>, <password>)`
   - `GET "/auth/logout"`
   - `GET "/auth/refresh"`
 - **Handlers**:
@@ -363,14 +363,14 @@ The backend application is structured as a modular architecture and follows a do
 
 - **Responsibility**: Handles booking-related business logic.
 - **Endpoints**:
-  - `POST "/booking/vehicle-types" ({sub-domain})`
-  - `POST "/booking/service-types" ({sub-domain})`
-  - `POST "/booking/available-timeslots" ({sub-domain}, {vehicle-type}, {service-type})`
-  - `POST "/booking/service-cost" ({sub-domain}, {vehicle-type}, {service-type})`
-  - `POST "/booking/create-booking" ({sub-domain}, {vehicle-type}, {service-type}, {payment-number}, {booking-number})`
-  - `POST "/booking/bookings" ({sub-domain}, {date-between})`
-  - `POST "/booking/booking/:id" ({sub-domain}, {booking-id})`
-  - `POST "/booking/cancel-booking/:id" ({sub-domain}, {booking-id})`
+  - `POST "/booking/vehicle-types" (<sub-domain>)`
+  - `POST "/booking/service-types" (<sub-domain>)`
+  - `POST "/booking/available-timeslots" (<sub-domain>, <vehicle-type>, <service-type>)`
+  - `POST "/booking/service-cost" (<sub-domain>, <vehicle-type>, <service-type>)`
+  - `POST "/booking/create-booking" (<sub-domain>, <vehicle-type>, <service-type>, <payment-number>, <booking-number>)`
+  - `POST "/booking/bookings" (<sub-domain>, <date-between>)`
+  - `POST "/booking/booking/:id" (<sub-domain>, <booking-id>)`
+  - `POST "/booking/cancel-booking/:id" (<sub-domain>, <booking-id>)`
 - **Handlers**:
   - **VehicleTypes**: Retrieves vehicle types.
   - **ServiceTypes**: Retrieves service types.
@@ -389,7 +389,7 @@ The backend application is structured as a modular architecture and follows a do
 
 - **Responsibility**: Handles payment processing.
 - **Endpoints**:
-  - `POST "/payment/pay-booking" ({booking-number})`
+  - `POST "/payment/pay-booking" (<booking-number>)`
 - **Handlers**:
   - **PayBooking**: Processes the booking payment.
 
