added all planend frontend components

--- a/v1.0-specification.md
+++ b/v1.0-specification.md
@@ -260,7 +260,7 @@ Routing for AdminApp in `routes.tsx` is as follows:
 - `/admin`: Renders `AdminApp`
   - `''`: Default route rendering `DashboardPage`
   - `'booking-management'`: Renders `BookingManagementPage`
-    - `booking`: Renders `BookingSelectionPage`
+  - `'booking'`: Renders `BookingSelectionPage`
 
 ## Components
 
